[build-system]
requires = [
    "setuptools >= 67",
]
build-backend = "setuptools.build_meta"

[project]
name = "two_comp"
authors = [
    {name = "james_tate"}
]
requires-python = ">=3.8"
dependencies = [
]
dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 90
include = 'src'

[project.optional-dependencies]
develop = [
    "isort",
    "black",
    "flake8",
    "pylint",
    "pre-commit-hooks",
    "pdoc",
    "pytest",
    "ipython",
]
